--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       </h2>
       <p class="lead">The project involves developing a front-end<b> Netflix clone</b> focused on creating a visually appealing and fully responsive homepage. This homepage will feature a dynamic layout showcasing sections for trending, popular, and recommended content, with high-quality images and video thumbnails. Users will be able to browse through various categories, with each thumbnail displaying basic information such as the title and genre. The design will prioritize a clean, user-friendly interface and be optimized for performance across all devices.</p>
       <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-        <button type="button" class="btn btn-secondary btn-lg"><a href="../5/index.html">View Project</a></button>
+        <button type="button" class="btn btn-secondary btn-lg"><a href="./5/index.html">View Project</a></button>
       </div>
     </div>
   </div>
@@ -93,7 +93,7 @@
       <h2 class="display-5 text-body-emphasis">StylePulse</h2>
       <p class="lead">The project involves developing a front-end website for<b> StylePulse</b>, an online shopping app specializing in the latest fashion trends. The homepage will be visually appealing, user-friendly, and fully responsive, showcasing featured collections, bestsellers, and new arrivals with high-quality images. Key sections will include categories for men's, women's, kids, and beauty products, with intuitive navigation and filters for easy browsing. Each product listing will display essential information like price, size options, and customer reviews. The design will incorporate a sleek, modern aesthetic that reflects the StylePulse brand and will be optimized for seamless performance on all devices.</p>
       <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-        <button type="button" class="btn btn-secondary btn-lg"><a href="../7/index.html">View Project</a></button>
+        <button type="button" class="btn btn-secondary btn-lg"><a href="./7/index.html">View Project</a></button>
       </div>
     </div>
   </div>
